--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "deepmerge": "^4.2.2",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.7.2"
   }
 }
