--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
+    "keen-slider": "^6.6.14",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
